# not-terminal

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  GHOSTTY_INTEGRATION.md  Makefile  README.md  build.rs  ghostty-theme.ghostty
assets/: app-icon.icns
frontend/search-pane/: package.json
frontend/search-pane/src/: main.js
src/: ghostty_embed.rs  ghostty_runtime_shim.c  ghostty_runtime_shim.m  main.rs  webview.rs  webview_shim.m
src/app/: diff_runtime.rs  git_branch.rs  git_diff.rs  git_watch.rs  git_worktrees.rs  mod.rs  model.rs  persistence.rs  project_search.rs  project_search_view.rs  runtime.rs  search_runtime.rs  shortcuts.rs  state.rs  update.rs  view.rs
src/app/state/: browser.rs  project.rs  terminal.rs  terminal_status.rs
src/app/update/: browser.rs  input.rs
src/app/view/: modal.rs  panel.rs  sidebar.rs
