[package]
name = "not-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.14"
iced_term = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
rfd = "0.15"

# [target.'cfg(target_os = "macos")'.dependencies]
# cocoa = "0.26"
# objc = "0.2"

[build-dependencies]
cc = "1.2"
