[package]
name = "not-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["smol"] }
iced_term = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
rfd = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
notify = "8.2"

[build-dependencies]
cc = "1.2"
